# nbody-setup

./: LICENSE  README.md  pyproject.toml
src/nbody_setup/: __init__.py  files.py  run_camb.py
src/nbody_setup/initial_conditions/: __init__.py  ic_class.py  twolpt.py
