[project]
name = "nbody-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sagan Sutherland", email = "sagan.sutherland@uconn.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "camb>=1.6.4",
    "numpy>=2",
]

[project.scripts]
nbody-setup = "nbody_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
